--- a/egsim/app/templates/home.html
+++ b/egsim/app/templates/home.html
@@ -39,7 +39,7 @@
 				Find out how to compile, inspect and upload observed (or synthetic) ground motion data
 				</p>
 				<p>
-				<button class='btn btn-primary text-nowrap' @click="currentPage = pages. currentPage = pages.flatfile_meta_info">
+				<button class='btn btn-primary text-nowrap' @click="currentPage = pages. currentPage = pages.flatfile_column_info">
 					<i class="fa fa-database me-1"></i> Data compilation
 				</button>
 				</p>
