--- a/egsim/app/templates/navbar.html
+++ b/egsim/app/templates/navbar.html
@@ -13,7 +13,7 @@
 			<i class="fa fa-database me-1"></i> Data
 		</button>
 		<ul class="dropdown-menu bg-dark rounded-top-0">
-			<li><button type="button" class="dropdown-item" @click="currentPage = pages.flatfile_meta_info">
+			<li><button type="button" class="dropdown-item" @click="currentPage = pages.flatfile_column_info">
 				Compilation
 			</button></li>
 			<li><button type="button" class="dropdown-item" @click="currentPage = pages.flatfile_visualize">
